# app/Http/Resources/CardResource.php
@@ -12,8 +12,7 @@ class CardResource extends JsonResource
         return [
             'id' => $this->id,
             'question' => $this->question,
-            'answer' => $this->answer,
-            'difficulty' => $this->difficulty,
+            'answer' => $this->answer
         ];
     }
 }
